--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=EmployeeTool
+application.vendor=DiegoWindows
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,12 +27,19 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/EmployeeTool.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.jackson-annotations-2.12.7.jar=C:\\Users\\DiegoWindows\\Downloads\\jackson-annotations-2.12.7.jar
+file.reference.jackson-core-2.12.7.jar=C:\\Users\\DiegoWindows\\Downloads\\jackson-core-2.12.7.jar
+file.reference.jackson-databind-2.12.7.1.jar=C:\\Users\\DiegoWindows\\Downloads\\jackson-databind-2.12.7.1.jar
 file.reference.mssql-jdbc-12.8.1.jre8.jar=C:\\Users\\DiegoWindows\\Downloads\\sqljdbc_12.8.1.0_enu\\sqljdbc_12.8\\enu\\jars\\mssql-jdbc-12.8.1.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-12.8.1.jre8.jar}
+    ${file.reference.mssql-jdbc-12.8.1.jre8.jar}:\
+    ${file.reference.jackson-annotations-2.12.7.jar}:\
+    ${file.reference.jackson-core-2.12.7.jar}:\
+    ${file.reference.jackson-databind-2.12.7.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
